# Minecraft-RustVersion

./: .gitignore  README.md
.trae/rules/: project_rules.md
Noise/: Cargo.toml
Noise/Editor/: Cargo.toml  开发准备.md
Noise/Editor/assets/: ui_strings.json
Noise/Editor/src/: graph_editor.rs  main.rs  preview.rs  ui_strings.rs
Noise/assets/noise_graphs/: default.ron
Noise/engine/: Cargo.toml
Noise/engine/src/: api.rs  graph.rs  lib.rs  sampling.rs
minecraft_rust/: .gitignore  Cargo.toml  GAME_FEATURES.md  PERFORMANCE_OPTIMIZATION.md  README.md  localization.json  ui_strings.json
minecraft_rust/New World/: world_info.json
minecraft_rust/launcher/: Cargo.toml  README.md
minecraft_rust/launcher/src/: main.rs
minecraft_rust/localization/: en_us.json  zh_cn.json
minecraft_rust/saves/New World/: world_info.json
minecraft_rust/scripts/: bedrock.lua  dirt.lua  grass.lua  init.lua  stone.lua
minecraft_rust/src/: block_registry.rs  controller.rs  game_state.rs  hud.rs  inventory.rs  localization.rs  main.rs  pause_menu.rs  scripting.rs  systems.rs  ui.rs  ui_strings.rs
minecraft_rust/src/rendering/: mod.rs  texture_loader.rs  voxel_mesh.rs
minecraft_rust/src/world/: chunk.rs  chunk_loader.rs  generator.rs  mod.rs  storage.rs
minecraft_rust/test/: world_info.json
minecraft_rust/test2/: world_info.json
