[package]
name = "minecraft_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12" }
bevy_egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noise = "0.8"
ndarray = "0.15"
rayon = "1.7"
thiserror = "1.0"
bincode = "1.3"
flate2 = "1.0"
lz4_flex = "0.11"
dashmap = "5.5"
crossbeam = "0.8"
uuid = { version = "1.0", features = ["v4"] }
fastnoise-lite = "1.1"
image = "0.24"
serde_bytes = "0.11"
mlua = { version = "0.9", features = ["lua54", "vendored", "send"] }
futures-lite = "2.0"
chrono = { version = "0.4.41", features = ["serde"] }
