[package]
name = "noise_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
noise_engine = { path = "../engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
thiserror = "1"
anyhow = "1"
bevy = { version = "0.13", features = ["bevy_winit", "bevy_pbr", "bevy_ui"] }
bevy_egui = "0.26"
petgraph = "0.6"
egui-snarl = { version = "0.8.0", features = ["serde"] }
